# mjml-python

./: .gitignore  Cargo.toml  README.md  SECURITY.md  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: CI.yml
src/: lib.rs
tests/: test_mjml2html.py
