[build-system]
requires = ["maturin>=1.8.3,<2"]
build-backend = "maturin"

[project]
name = "mjml-python"
description = "A Python wrapper for MRML (Rust port of MJML)."
version = "1.3.5"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
"Homepage" = "https://github.com/mgd020/mjml-python"
"Bug Tracker" = "https://github.com/mgd020/mjml-python/issues"
